examples/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Thu Jun 20 11:29:35 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [1148:117388]
:OUTPUT ACCEPT [307:51206]
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i tap+ -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i br+ -j ACCEPT
-A FORWARD -i eth0 -o br+ -j ACCEPT
-A FORWARD -i br+ -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o tap+ -j ACCEPT
-A FORWARD -i tap+ -o eth0 -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -o lo -j ACCEPT
COMMIT
# Completed on Thu Jun 20 11:29:35 2019
# Generated by iptables-save v1.6.1 on Thu Jun 20 11:29:35 2019
*nat
:PREROUTING ACCEPT [532:39829]
:INPUT ACCEPT [28:3344]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Jun 20 11:29:35 2019
